# LED_Oxide

./: .gitmodules  Cargo.toml  Dockerfile  Rocket.toml  readme.md
src/: lib.rs  main.rs
src/led_strip_controller/: color.rs  controller.rs  mod.rs  protocol.rs
static/: index.html  style.css
tests/: protocol_tests.rs
